k8s/strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi-backend
  template:
    metadata:
      labels:
        app: strapi-backend
    spec:
      containers:
        - name: strapi-backend
          image: bizzhle/strapi-backend
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: LoadBalancer
