k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: api.activity.local
      http:
        paths:
          - path: /postgres
            pathType: Prefix
            backend:
              service:
                name: postgres-service
                port:
                  number: 5432
          - path: /admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: strapi-service
                port:
                  number: 1337
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: strapi-service
                port:
                  number: 1337
